# tootoo_recomendation

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  eod.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/core/: Cargo.toml
crates/core/migrations/: 20260127_000001_recommendations.sql  20260127_000002_stock_features.sql  20260127_000003_stock_features_ingest_runs.sql  20260129000001_kis_tokens.sql
crates/core/src/: lib.rs
crates/core/src/domain/: contract.rs  mod.rs  recommendation.rs
crates/core/src/ingest/: kis.rs  mod.rs  provider.rs  types.rs
crates/core/src/llm/: anthropic.rs  error.rs  json.rs  mod.rs
crates/core/src/storage/: lock.rs  mod.rs  recommendations.rs  stock_features.rs
crates/core/src/time/: kr_market.rs  mod.rs
crates/worker/: Cargo.toml
crates/worker/src/: ingest.rs  main.rs  universe.rs
docs/: api-contract.md  feature-schema.md
