[package]
name = "tootoo_api"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
sentry.workspace = true
sentry-anyhow.workspace = true
sentry-tracing.workspace = true

tootoo_core = { path = "../core" }
