[package]
name = "tootoo_worker"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
serde_json.workspace = true
sentry.workspace = true
sentry-anyhow.workspace = true
sentry-tracing.workspace = true

tootoo_core = { path = "../core" }
